Added catalog section
are the menus broken?

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
+	<link rel="stylesheet" href="stylesheets/index.css" type="text/css" />
 	<script src="js/vendor/jquery-2.1.1.min.js"></script>
 	<script src="js/foundation/foundation.js"></script>
 	<script src="js/foundation/foundation.offcanvas.js"></script>
@@ -146,6 +146,17 @@
 					</div>
 				</div>
 				<!-- END OF: STRIPE THREE -->
+				<!-- CATALOG STRIPE -->
+				<div class="stripe catalog">
+					<div class="tileContainer">
+						<div class="floatTitle marginFix"><h2 class="threeh2">Available Courses</h2></div>
+						<div class="tile firstTile fullWidthTile">
+							<h3>High School Suite Catalog</h3>
+							<p class="plarge"><a href="http://is.byu.edu/site/courses/index.cfm#university=false|high-school=on|middle-school=false|continuing-education=false|ig=on|online=on|paper=on">View the catalog</a> for the list of 200+ available courses!</p>
+						</div>
+					</div>
+				</div>
+				<!-- END OF: CATALOG STRIPE -->
 				<!-- STRIPE FOUR -->
 				<div class="stripe four">
 					<!-- TILE CONTAINER -->
